gccida/c3/ephi_create
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ephi_create/src/ssa.c:1826:22: error: use of undeclared identifier 'machine_mode'
v11 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)nodes[v30] + 2)); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ephi_create/src/obj/ssa.o] Error 1
